# copiar

./: .env.example  LICENSE  README.md  copiar.py  pyproject.toml
.github/workflows/: sync.yml
