[project]
name = "copiar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.31.0", "python-dotenv>=1.0.0"]

[dependency-groups]
dev = ["ruff>=0.9.0", "ty>=0.0.1a8"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # docstrings not required
    "COM812",  # trailing comma (conflicts with formatter)
    "ISC001",  # implicit concat (conflicts with formatter)
    "T201",    # print is appropriate for CLI tools
    "S603",    # subprocess call with trusted git args
    "S607",    # partial executable path (git is always on PATH)
    "PLR2004", # HTTP status code magic numbers are standard
    "EXE001",  # shebang present; chmod handled by uv run
    "PLR0913", # slightly over 5-arg limit is fine here
    "FBT001",  # bool positional arg is fine for internal helpers
    "FBT002",  # bool default value is fine
    "S101",    # assert used for type narrowing
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
division-by-zero = "error"
